# memory-brain

./: .claude_project_cache.json  .dockerignore  .env  .env.example  .env.old  .gitignore  AGENTS.md  AXPL-2.json  CLAUDE.backup  CLAUDE.corrupted.backup  CLAUDE.md  COMPREHENSIVE_TEST_REPORT.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.embedding  Dockerfile.memory  FINAL_CODE_VERIFICATION_REPORT.md  FINAL_STATUS_REPORT.md  FINAL_STATUS_REPORT_UPDATED.md  FINAL_SYSTEM_STATUS_REPORT.md  FINAL_SYSTEM_STATUS_REPORT_UPDATED.md  FORENSIC_INVESTIGATION_FINAL_REPORT_X200000.md  JUPYTER_FINAL_STATUS.md  JUPYTER_SETUP_REPORT.md  LEGACY_CLEANUP_REPORT.md  MIGRATION_REPORT.md  Makefile  ONNX_RUNTIME_SETUP.md  PROJECT_STATUS_2025_09_09.md  PROJECT_STATUS_FINAL.md  PROJECT_STATUS_UPDATED.md  QUALITY_PROGRESS_REPORT.md  QUALITY_REPORT_FINAL.md  README-Docker.md  README.md  REAL_MEMORY_ACCURACY_ASSESSMENT.md  REAL_MEMORY_WORKABILITY_REPORT.md  SECURITY_FIXES_REPORT.md  SYSTEM_QUALITY_FINAL_REPORT.md  (+88 more)
.cargo/: config.toml
.claude/: settings.local.json
.ipynb_checkpoints/: ai_memory_analysis-checkpoint.ipynb  test-checkpoint.bat
benches/: dummy.rs  memory_benchmarks.rs  simd_benchmark.rs
config/: embeddinggemma.toml
datasets/: curated.jsonl  stress.jsonl  synthetic.jsonl
docker/: README.md
docs/: README.md  cognitive_usage.md  contract.md  efficient-memory-service-architecture.md  error_handling.md  integration_agents.md  manifest.json  manifest.schema.json  memory_model.md  observability_pro.md  quality.md  release_checklist.md  time_model.md
reports/: FINAL_IMPLEMENTATION_STATUS.md  IMPLEMENTATION_REPORT.md  REAL_STATUS_HONEST_REPORT.md  dashboard.html  dataset_seed.json  embedding_service_implementation_report.md  implementation_summary.md  metrics_timeseries.jsonl  param_tuning_report.json  progress-report-session2.md  project-status-report.md  quality_report.json  quality_stream.jsonl
scripts/: __init__.py  commit_new_tree.py  config_check.py  dashboard.ps1  dashboard.sh  dev_run.ps1  docs_check.py  download_models.ps1  download_models.sh  download_onnx_runtime.ps1  maintenance.py  metrics_collector.py  mock_embedding_server.py  (+15 more)
(+39 files in other folders)
